# RedisClient

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_publisher.cpp  example_subscriber.cpp
include/: redisClient.h
libraries/: CMakeLists.txt
libraries/hiredis/: CMakeLists.txt
libraries/spdlog/: CMakeLists.txt
libraries/spdlog/cmake/: spdlogConfig.cmake.in
src/: redisClient.cpp
